force-app/main/default/objects/Apex_log__c/Apex_log__c.object-meta.xml
<CustomObject>
    <description>Used for a broader spectrum of logging. For our Account integration we dont return an exception if we have an error; instead we create these logs.</description>
    <label>Apex log</label>
    <nameField>
        <label>Apex log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>