force-app/main/default/objects/Apex_log__c/fields/ccust__c.field-meta.xml
<CustomField>
    <fullName>ccust__c</fullName>
    <label>ccust</label>
    <length>20</length>
    <type>Text</type>
</CustomField>