force-app/main/default/objects/Apex_log__c/fields/Full_Record_Representation__c.field-meta.xml
<CustomField>
    <fullName>Full_Record_Representation__c</fullName>
    <label>Full Record Representation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>