force-app/main/default/objects/Apex_log__c/fields/log__c.field-meta.xml
<CustomField>
    <fullName>log__c</fullName>
    <label>log</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>