force-app/main/default/objects/Apex_log__c/fields/Record_name__c.field-meta.xml
<CustomField>
    <fullName>Record_name__c</fullName>
    <label>Record name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>