force-app/main/default/objects/Apex_log__c/fields/Time_registered__c.field-meta.xml
<CustomField>
    <fullName>Time_registered__c</fullName>
    <label>Time registered</label>
    <type>DateTime</type>
</CustomField>