force-app/main/default/objects/Apex_log__c/fields/Unit_code__c.field-meta.xml
<CustomField>
    <fullName>Unit_code__c</fullName>
    <label>Unit code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>