force-app/main/default/objects/Apex_log__c/listViews/Account_logs.listView-meta.xml
<ListView>
    <fullName>Account_logs</fullName>
    <columns>NAME</columns>
    <columns>ccust__c</columns>
    <columns>Unit_code__c</columns>
    <columns>log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Account log</value>
    </filters>
    <label>Account logs</label>
</ListView>