force-app/main/default/objects/Apex_log__c/listViews/Address_logs.listView-meta.xml
<ListView>
    <fullName>Address_logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Unit_code__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Address log</value>
    </filters>
    <label>Address logs</label>
</ListView>