force-app/main/default/objects/Apex_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Unit_code__c</columns>
    <columns>ccust__c</columns>
    <columns>log__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>